--- a/css/shared/_variables.scss
+++ b/css/shared/_variables.scss
@@ -16,6 +16,8 @@ $color-link-hover: rgb(26, 102, 255);
 
 $color-card-border: rgba(0, 0, 0, 0.125);
 
+$color-availability: #3bc03b;
+
 
 $color-danger: red;
 $color-warning: orange;
