--- a/css/productDetail.scss
+++ b/css/productDetail.scss
@@ -215,6 +215,10 @@
                     padding: 2px 5px;
                 }
             }
+            .social-bar{
+                display: flex;
+                align-items: center;
+            }
 
         }
 
