--- a/css/main.css
+++ b/css/main.css
@@ -82,6 +82,63 @@ h3 {
   color: white;
 }
 
+.review {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 45px;
+  border-bottom: 1px solid #f0f0f0;
+  padding: 0 20px;
+  padding-bottom: 10px;
+}
+
+@media (max-width: 767.98px) {
+  .review {
+    display: block;
+  }
+}
+
+.review .photo {
+  height: 75px;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 65px;
+          flex: 0 0 65px;
+  margin-right: 25px;
+}
+
+@media (max-width: 767.98px) {
+  .review .photo {
+    width: 75px;
+    margin: auto;
+    margin-bottom: 10px;
+  }
+}
+
+.review .photo img {
+  max-width: 100%;
+  max-height: 100%;
+  border-radius: 50000px;
+}
+
+.review .info-wrapper {
+  font-size: 14px;
+}
+
+.review .info-wrapper .author {
+  font-size: 18px;
+  font-weight: 600;
+  color: #3d464d;
+}
+
+.review .info-wrapper .content {
+  margin-top: 5px;
+  padding: 5px 0;
+}
+
+.review .info-wrapper .date {
+  color: #737373;
+}
+
 .rating-stars i {
   color: #ffd333;
 }
