--- a/css/shared/_typography.scss
+++ b/css/shared/_typography.scss
@@ -53,6 +53,48 @@ h3{
     }
 }
 
+.review{
+    display: flex;
+    margin-bottom: 45px;
+    border-bottom: 1px solid $color-smoke;
+    padding: 0 20px;
+    padding-bottom: 10px;
+    @include media-breakpoint-down(sm) { 
+        display: block;
+    }
+    .photo{
+        height: 75px;
+        
+        flex: 0 0 65px;
+        margin-right: 25px;
+        @include media-breakpoint-down(sm) { 
+            width: 75px;
+            margin: auto;
+            margin-bottom: 10px;
+        }
+        img{
+            max-width: 100%;
+            max-height: 100%;
+            border-radius: 50000px;
+        }
+    }
+    .info-wrapper{
+        font-size: $font-small;
+        .author{
+            font-size: 18px;
+            font-weight: 600;
+            color: $secondary;
+        }
+        .content{
+            margin-top: 5px;
+            padding: 5px 0;
+        }
+        .date{
+            color: $color-dark-smoke;
+        }
+    }
+}
+
 //Products-layout / product-detail stuff
 .rating-stars{
     i{
