--- a/css/productDetail.css
+++ b/css/productDetail.css
@@ -5,6 +5,34 @@
   transition: all 0.3s ease-in;
 }
 
+.product-layout .owl-nav .owl-prev:hover, .product-layout .owl-nav .owl-next:hover {
+  background-color: #f0f0f0;
+}
+
+.product-layout .owl-nav .owl-prev.disabled, .product-layout .owl-nav .owl-next.disabled {
+  opacity: 1;
+}
+
+.product-layout .owl-nav .owl-prev.disabled i, .product-layout .owl-nav .owl-next.disabled i {
+  opacity: 0.5;
+}
+
+.product-layout .owl-nav .owl-prev i, .product-layout .owl-nav .owl-next i {
+  font-size: 25px;
+  padding: 5px;
+  color: #3d464d;
+}
+
+.product-layout .owl-dots .owl-dot span {
+  background-color: #f0f0f0;
+  width: 11px;
+  height: 11px;
+}
+
+.product-layout .owl-dots .owl-dot.active span {
+  background-color: #ffd333;
+}
+
 .product-layout h3 {
   font-size: 25px;
   font-weight: 600;
@@ -44,6 +72,40 @@
   padding: 30px;
 }
 
+.product-layout .product-images-container .photos-carousel .col {
+  padding: 2px;
+}
+
+@media (max-width: 767.98px) {
+  .product-layout .product-images-container .photos-carousel .owl-nav {
+    display: none;
+  }
+}
+
+.product-layout .product-images-container .photos-carousel .owl-nav .owl-prev, .product-layout .product-images-container .photos-carousel .owl-nav .owl-next {
+  position: absolute;
+  top: 25px;
+  background-color: #f0f0f0;
+}
+
+.product-layout .product-images-container .photos-carousel .owl-nav .owl-prev {
+  left: -20px;
+}
+
+.product-layout .product-images-container .photos-carousel .owl-nav .owl-next {
+  right: -17px;
+}
+
+.product-layout .product-images-container .photos-carousel .owl-dot {
+  margin-top: 10px;
+}
+
+@media (min-width: 768px) {
+  .product-layout .product-images-container .photos-carousel .owl-dot {
+    display: none;
+  }
+}
+
 .product-layout .product-images-container .product-photos {
   margin-top: 15px;
 }
@@ -59,7 +121,6 @@
 }
 
 .product-layout .product-images-container .product-photos .col a {
-  display: block;
   height: 100%;
   width: 100%;
   display: -webkit-box;
@@ -72,8 +133,9 @@
 
 .product-layout .product-images-container .product-photos .col a img {
   max-height: 100%;
-  max-width: 100%;
+  width: auto !important;
   padding: 5px;
+  margin: auto;
 }
 
 .product-layout .product-basic-wrapper .product-info {
@@ -425,33 +487,5 @@
   resize: vertical;
   background-color: white;
   border: 2px solid #f0f0f0;
-}
-
-.product-layout .owl-nav .owl-prev:hover, .product-layout .owl-nav .owl-next:hover {
-  background-color: #f0f0f0;
-}
-
-.product-layout .owl-nav .owl-prev.disabled, .product-layout .owl-nav .owl-next.disabled {
-  opacity: 1;
-}
-
-.product-layout .owl-nav .owl-prev.disabled i, .product-layout .owl-nav .owl-next.disabled i {
-  opacity: 0.5;
-}
-
-.product-layout .owl-nav .owl-prev i, .product-layout .owl-nav .owl-next i {
-  font-size: 25px;
-  padding: 5px;
-  color: #3d464d;
-}
-
-.product-layout .owl-dots .owl-dot span {
-  background-color: #f0f0f0;
-  width: 11px;
-  height: 11px;
-}
-
-.product-layout .owl-dots .owl-dot.active span {
-  background-color: #ffd333;
 }
 /*# sourceMappingURL=productDetail.css.map */
