Košík - první část

--- a/css/header.scss
+++ b/css/header.scss
@@ -463,7 +463,7 @@
                     height: 60px;
                     width: 100%;
                     border: none;
-                    border-bottom: 2px solid $color-smoke;
+                    border-bottom: $default-border;
                     padding-left: 15px;
                 }
                 .search-button-group{
@@ -478,7 +478,7 @@
                     }
                     button{
                         border: none;
-                        border-right: 2px solid $color-smoke;
+                        border-right: $default-border;
                         background-color: white;
                         height: 56px;
                         padding-right: 15px;
@@ -516,14 +516,14 @@
             .dropdown-menu{
                 margin-top: -5px;
                 width: 100%;
-                border: 2px solid $color-smoke;
+                border: $default-border;
                 text-align: left !important;
             }
         }
         .navigation-link{
             padding-left: 20px; 
             width: 100%;
-            border: 2px solid $color-smoke;
+            border: $default-border;
             text-align: left !important;
         }
     }
