--- a/css/shared/_variables.scss
+++ b/css/shared/_variables.scss
@@ -29,6 +29,8 @@ $color-rating-stars: rgb(255, 211, 51);
 
 $font-small: 14px;
 
+$default-border: 2px solid $color-smoke;
+
 //Header
 $nav-font-weight: 700;
 $top-bar-height: 32px;
