--- a/css/cart.scss
+++ b/css/cart.scss
@@ -209,3 +209,135 @@
     }
     
 }
+.cart-section.empty{
+    .container{
+        .row{
+            text-align: center;
+            height: 300px;
+            align-items: center;
+            .btn-standard{
+                max-width: 200px;
+                margin: auto;
+                margin-top: 30px;
+            }
+        }
+    }
+}
+.checkout{
+    h3,h4
+    {
+        font-weight: 700;
+    }
+    .customer-data{
+        border: $default-border;
+        .line{
+            display: flex;
+            justify-content: space-between;
+            label{
+                flex: 1;
+            }
+            .left{
+                margin-right: 20px;
+            }
+        }
+        label{
+            display: block;
+            color: $color-dark-smoke;
+            margin: 0;
+            input,select{
+                width: 100%;
+                height: 35px;
+                border: $default-border;
+                background-color: white;
+                padding-left: 10px;
+                color: $color-dark-smoke;
+                margin-bottom: 20px;
+            }
+            textarea{
+                width: 100%;
+                min-height: 100px;
+                border: $default-border;
+                resize: vertical;
+            }
+        }
+
+        .check{
+            display: none;
+        }
+        .check:checked ~ .fake-check{
+            border: 2px solid $color-smoke;
+            div{
+               opacity: 1;
+               visibility: visible;
+            }
+        }
+        .fake-check{
+            width: 20px;
+            height: 20px;
+            background-color: white;
+            border: $default-border;
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            div{
+                display: block;
+                opacity: 0;
+                visibility: hidden;
+                width: 10px;
+                height: 10px;
+                background-color: $color-smoke;
+            }
+            
+        }
+        .main-data,.shipping-details{
+            padding: 20px;
+        }
+        .shipping-details{
+            border-top: $default-border;
+            .second-adress{
+                display: none;
+            }
+            .second-adress-check:checked ~ .second-adress{
+                display: block;
+            } 
+        }
+        
+
+    }
+    .right-panel{
+        font-size: $font-small;
+        border: $default-border;
+        padding: 20px;
+        .line.header{
+            margin-top: 25px;
+            margin-bottom: 15px;
+            padding-bottom: 5px;
+            font-weight: 600;
+            border-bottom: $default-border;
+        }
+        .line.product{
+            color: $color-dark-smoke;
+        }
+        .line{
+            color: $secondary;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 7px;
+            .product-name{
+                width: 60%;
+            }
+            .left{
+                font-weight: 600;
+            }
+        }
+        .line.big{
+            font-size: 20px;
+        }
+        .sub-price{
+            border: $default-border;
+            border-width: 2px 0;
+            padding: 8px 0;
+        }
+    }
+}
