--- a/css/main.css
+++ b/css/main.css
@@ -41,6 +41,11 @@ h1, h2, h3, h4, h5, h6 {
 
 h3 {
   font-size: 30px;
+  font-weight: 600;
+}
+
+h4 {
+  font-weight: 600;
 }
 
 .btn {
@@ -223,6 +228,79 @@ input[type=number]::-webkit-outer-spin-button {
   min-height: 31px;
   font-weight: bold;
   text-align: center;
+}
+
+form input {
+  padding: 0 10px;
+  border: 2px solid #f0f0f0;
+  border-right-width: 0;
+}
+
+form label {
+  display: block;
+  color: #737373;
+  margin: 0;
+}
+
+form label input, form label select {
+  width: 100%;
+  height: 35px;
+  border: 2px solid #f0f0f0;
+  background-color: white;
+  padding-left: 10px;
+  color: #737373;
+  margin-bottom: 20px;
+}
+
+form label textarea {
+  width: 100%;
+  min-height: 100px;
+  border: 2px solid #f0f0f0;
+  resize: vertical;
+}
+
+form .check {
+  display: none;
+}
+
+form .check:checked ~ .fake-check {
+  border: 2px solid #f0f0f0;
+}
+
+form .check:checked ~ .fake-check div {
+  opacity: 1;
+  visibility: visible;
+}
+
+form .fake-check {
+  width: 20px;
+  height: 20px;
+  background-color: white;
+  border: 2px solid #f0f0f0;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+form .fake-check div {
+  display: block;
+  opacity: 0;
+  visibility: hidden;
+  width: 10px;
+  height: 10px;
+  background-color: #f0f0f0;
+}
+
+form button.btn-standard {
+  border: none;
+  -webkit-box-shadow: none;
+          box-shadow: none;
 }
 
 .custom-check .custom-check-container {
